--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,8 @@ main:
   - title: "Posters and Presentations"
     url: /posters/
 
-  - title: "Research Experience"
-    url: /researchexperience/
+  - title: "Projects"
+    url: /projects/
 
   - title: "PoRs"
     url: /xyz/
