--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,19 +2,19 @@
 main:
 
   - title: "Publications"
-    url: /publications/
+    url: swetha9730.github.io/publications/
 
   - title: "Posters and Presentations"
-    url: /posters/
+    url: swetha9730.github.io/posters/
 
   - title: "Projects"
-    url: /projects/
+    url: swetha9730.github.io/projects/
 
   - title: "PoRs"
-    url: /xyz/
+    url: swetha9730.github.io/pors/
 
   - title: "Public Spotlights"
-    url: /talks/    
+    url: swetha9730.github.io/talks/    
 
   #- title: "Teaching"
   #  url: /teaching/    
