--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
     url: https://swetha9730.github.io/pors/
 
   - title: "Public Spotlights"
-    url: /talks/    
+    url: /spotlights/    
 
   #- title: "Teaching"
   #  url: /teaching/    
