--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     url: https://swetha9730.github.io/posters/
 
   - title: "Projects"
-    url: https://swetha9730.github.io/projects/
+    url: https://swetha9730.github.io/project/
 
   - title: "PoRs"
     url: https://swetha9730.github.io/pors/
