--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Swetha Arumugam"
 title_separator          : "-"
 name                     : &name "Swetha Arumugam"
 description              : &description "personal description"
-url                      : https://akleroy.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://swetha9730.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "akleroy/akleroy.github.io"
+repository               : "swetha9730/swetha9730.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
