--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Adam K. Leroy"
+  name             : "Arumugam Swetha"
   avatar           : "akl_picture_2017.jpeg"
-  bio              : "Astronomer and professor working on galaxies, star formation, stellar feedback, and the interstellar medium."
-  location         : "Columbus, Ohio, USA"
-  employer         : "Ohio State University"
+  bio              : "Student at IIT-Hyderadad who is currently pursuring to be a data scientiest in Astronomy"
+  location         : "Hyderabad,Telagana, India"
+  employer         : "Indian Institute of Techlogy Hyderabad"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : leroy.42@osu.edu
