--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Arumugam Swetha"
+  name             : "Swetha Arumugam"
   avatar           : "akl_picture_2017.jpeg"
-  bio              : "Student at IIT-Hyderadad who is currently pursuring to be a data scientiest in Astronomy"
-  location         : "Hyderabad,Telagana, India"
+  bio              : "Undergrad student at IIT-Hyderabad aiming to pursue PhD in Physics/Astronomy"
+  Linkedin         : "https://www.linkedin.com/in/swetha-arumugam-955751217/"
   employer         : "Indian Institute of Techlogy Hyderabad"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/0000-0002-2545-1700"
+  orcid            : "https://orcid.org/0009-0001-3587-6622"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
