--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Swetha Arumugam"
   avatar           : "akl_picture_2017.jpeg"
   bio              : "Undergrad student at IIT-Hyderabad aiming to pursue PhD in Physics/Astronomy"
-  location         : #"https://www.linkedin.com/in/swetha-arumugam-955751217/"
-  employer         : "Indian Institute of Technology Hyderabad"
+  location         : "Hyderrabad,Telangana,India"
+  employer         : #"Indian Institute of Technology Hyderabad"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            :  ee20btech11005@iith.ac.in
