--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links links
 main:
+  - title: "CV"
+    url: https://github.com/amandakreider/amandakreider.github.io
 
   - title: "Publications"
     url: https://swetha9730.github.io/publications/
