--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Swetha Arumugam"
   avatar           : "akl_picture_2017.jpeg"
   bio              : "Undergrad student at IIT-Hyderabad aiming to pursue PhD in Physics/Astronomy"
-  location         : "Hyderrabad,Telangana,India"
+  location         : "Hyderabad, Telangana, India"
   employer         : #"Indian Institute of Technology Hyderabad"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
