--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: https://github.com/amandakreider/amandakreider.github.io
+    url: /files/Swetha_CV.pdf
 
   - title: "Publications"
     url: https://swetha9730.github.io/publications/
