--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@ main:
   - title: "Projects"
     url: https://swetha9730.github.io/project/
 
+  - title: "Experience"
+    url: https://swetha9730.github.io/experience/
+
   - title: "PoRs"
     url: https://swetha9730.github.io/pors/
 
