--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   - title: "PoRs"
     url: https://swetha9730.github.io/pors/
 
-  - title: "Public Spotlights"
-    url: https://swetha9730.github.io/spotlights/    
+  - title: "Media"
+    url: https://swetha9730.github.io/media/    
 
   #- title: "Teaching"
   #  url: /teaching/    
