--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Swetha Arumugam"
-  avatar           : "akl_picture_2017.jpeg"
+  avatar           : "WhatsApp Image 2023-11-15 at 5.24.20 PM.jpeg"
   bio              : "Undergrad student at IIT-Hyderabad aiming to pursue PhD in Physics/Astronomy"
   location         : "Hyderabad, Telangana, India"
   employer         : #"Indian Institute of Technology Hyderabad"
