--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "swetha-arumugam-955751217"
+  linkedin         : "swetha-arumugam33"
   orcid            : "https://orcid.org/0009-0001-3587-6622"
   pinterest        :
   soundcloud       :
