--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Swetha Arumugam"
   avatar           : "swetha_2023.png"
-  bio              : "Undergrad student at IIT-Hyderabad aiming to pursue PhD in Physics/Astronomy"
-  location         : "Hyderabad, Telangana, India"
+  bio              : "Undergrad student at IIT-Hyderabad aiming to pursue PhD in Astronomy"
+  location         : "Hyderabad, India"
   employer         : #"Indian Institute of Technology Hyderabad"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
