--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,8 +19,8 @@ main:
   #- title: "PoRs"
   # url: https://swetha9730.github.io/pors/
 
-  - title: "Media"
-    url: https://swetha9730.github.io/media/    
+  - title: "Public Coverage"
+    url: https://swetha9730.github.io/public_coverage/    
 
   #- title: "Teaching"
   #  url: /teaching/    
