--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /files/Swetha_CV.pdf
+    url: /files/Swetha_CV_final.pdf
     target: "_blank"
 
   - title: "Publications"
