--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
     #url: https://swetha9730.github.io/project/
 
   - title: "Experience"
-    url: https://swetha9730.github.io/experience/
+    url: https://Hashish-y.github.io/experience/
 
   #- title: "PoRs"
   # url: https://swetha9730.github.io/pors/
