--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@ main:
   - title: "Publications and Projects"
     url: https://Hashish-y.github.io/publications/
 
-  - title: "Posters and Presentations"
-    url: https://swetha9730.github.io/posters/
+  # - title: "Posters and Presentations"
+  #   url: https://swetha9730.github.io/posters/
 
   #- title: "Projects"
     #url: https://swetha9730.github.io/project/
