--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /files/Swetha_CV__final.pdf
+    url: /files/Hashish_CV_19thOct.pdf
     target: "_blank"
 
   - title: "Experience"
